Avoid word-wrap on too long addresses

--- a/assets/css/components/_bitcoin-addresses.scss
+++ b/assets/css/components/_bitcoin-addresses.scss
@@ -9,7 +9,7 @@ p.form-control-static.bitcoin-address {
   padding: 10px;
   text-align: center;
   font-family: "Courier New", monospace;
-  font-size: 10pt;
+  font-size: 8pt;
   color: $black;
   word-break: break-all;
 
